Fix topmost white space in Blog article
This style does not follow markup changes.

--- a/src/css/component/date.css
+++ b/src/css/component/date.css
@@ -2,7 +2,7 @@
 	font-size: var(--font-size-small);
 }
 
-section > .date:first-child {
+header > .date:first-child {
 	margin-block-start: var(--space-huge);
 }
 
